--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,7 @@
 Version:
 0.0.1 Minimal VHDL compile and simulation support.
 0.0.2 Support of OpenMP
+0.0.3 Support of ACCESS and FILE types
 
 Future:
 * Basic VHDL syntax
